--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1>I'm Saurabh</h1>
         <h2 class="programmer">I love <span class="span">pro</span>gramming </h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img class="mountain" src="images/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+        <img class="mountain" src="mountain.png" alt="mountain-img">
     </div>
 
     <div class="middle-container">
@@ -27,12 +27,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="code-img" src="images/programming language.png" alt="programming-img">
+            <img class="code-img" src="programming language.png" alt="programming-img">
             <h3>Loves Coding</h3>
             <p>I just love coding and I have also coded in many programming languages mainly include C and Java and not only this I spent my time solving major time on Leetcode and Hackerrank.</p>
           </div>
           <div class="skill-row">
-            <img class="web-img" src="images/web design.png" alt="web-design-img">
+            <img class="web-img" src="web design.png" alt="web-design-img">
             <h3>Web Design</h3>
             <p class="web-desc">I love to design web-sites and love to code and explore various web technologies currently, I love to take courses on website development on udemy.</p>
           </div>
