--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h2>Get In Touch</h2>
           <h3>If you love to code.</h3>
           <p class="para-contact">Feel free to contact me anytime.</p>
-          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:saurabhdubey836@email.com">CONTACT ME</a>
         </div>
       </div>
       
